@@ -5,6 +5,7 @@
 	  moved cleanup of intermediates for a single processed file
 	  from (cobc_clean_up) to (clean_up_intermediates) and call this in
 	  main after processing the single file
+	* parser.y, typeck.c: fixed some errors spotted by COB_TREE_DEBUG
 
 2017-11-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
